--- a/public/photos/photos.html
+++ b/public/photos/photos.html
@@ -22,7 +22,7 @@
 			<a href="#"  ng-click="vm.sortField = 'name'; vm.reverse = !vm.reverse;"> Sort by Name</a>
 			<a href="#" style="margin-left:60px" ng-click="vm.sortField = 'artist'; vm.reverse = !vm.reverse" > Sort by Artist</a>
 
-			<a href="#" style="margin-left:60px" ng-click="vm.sortField = 'price'; vm.reverse != vm.reverse"> Sort by price</a>
+			<a href="#" style="margin-left:60px" ng-click="vm.sortField = 'price'; vm.reverse = !vm.reverse"> Sort by price</a>
 			<br>
 
 		</div>
